WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
45501
AX: Mail crashes with searching for next misspelled word with VoiceOver
https://bugs.webkit.org/show_bug.cgi?id=45501
Summary
AX: Mail crashes with searching for next misspelled word with VoiceOver
chris fleizach
Reported
2010-09-09 16:15:03 PDT
-Start VoiceOver -Open mail.app -Create a new message -Leave to/subject/etc black -Click on compose area -type "This is a tesst test" -Note that on every keypress VO will output "The next text marker just equaled the current text marker. This is a bug in WebKit. Please inform them" -Press VO-CMD-E to find the next misspelled word happens every time
> 1 com.apple.WebCore 0x7fff9f2b8947 -[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:] + 0x5a7
2 com.apple.AppKit 0x7fffa092ea37 CopyParameterizedAttributeValue + 0x147 3 com.apple.HIServices 0x7fffa0521dbc _AXXMIGCopyParameterizedAttributeValue + 0x107 4 com.apple.HIServices 0x7fffa052c376 _XCopyParameterizedAttributeValue + 0x2f1 5 com.apple.HIServices 0x7fffa0508406 mshMIGPerform + 0x234 6 com.apple.CoreFoundation 0x7fffa31b047c __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 0x2c
Attachments
patch
(5.24 KB, patch)
2010-09-09 16:17 PDT
,
chris fleizach
ddkilzer
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2010-09-09 16:17:35 PDT
Created
attachment 67110
[details]
patch
David Kilzer (:ddkilzer)
Comment 2
2010-09-10 07:28:52 PDT
Comment on
attachment 67110
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=67110&action=prettypatch
> WebCore/accessibility/mac/AccessibilityObjectWrapper.mm:1979 > + return YES;
Is this fix related to this bug? If not, it should really be split into another bug report/commit. If you don't split it out, at least make a note that this fix is incidental and unrelated to the fix for the crash.
chris fleizach
Comment 3
2010-09-10 09:29:34 PDT
(In reply to
comment #2
)
> (From update of
attachment 67110
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=67110&action=prettypatch
> > > WebCore/accessibility/mac/AccessibilityObjectWrapper.mm:1979 > > + return YES; > > Is this fix related to this bug? If not, it should really be split into another bug report/commit. >
will separate into another bug. its always hard for me to pass up opportunity!
chris fleizach
Comment 4
2010-09-10 09:39:24 PDT
http://trac.webkit.org/changeset/67209
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug