Mail crashes with searching for next misspelled word with VoiceOver https://bugs.webkit.org/show_bug.cgi?id=45501

Reviewed by David Kilzer.

WebCore:

Test: platform/mac/accessibility/crash-in-element-for-text-marker.html

* accessibility/mac/AccessibilityObjectWrapper.mm:
(-[AccessibilityObjectWrapper accessibilityAttributeValue:forParameter:]):
    Check that the AX object is not nil before asking for the wrapper().

LayoutTests:

* platform/mac/accessibility/crash-in-element-for-text-marker-expected.txt: Added.
* platform/mac/accessibility/crash-in-element-for-text-marker.html: Added.



Canonical link: https://commits.webkit.org/57945@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67209 268f45cc-cd09-0410-ab3c-d52691b4dbfc